--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('https://cdn.pixabay.com/photo/2017/07/13/08/59/greenhouse-2499758_1280.jpg');
+  background-image: url('https://cdn.pixabay.com/photo/2019/04/28/02/16/conservatory-4161955_1280.jpg');
   background-size: 100% 100%;
   background-position: center;
-  filter: brightness(0.8);
+  filter: brightness(1);
 }
 .content {
   display: flex;
@@ -30,7 +30,7 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
- top: 100px;
+  top: 100px;
   backdrop-filter: blur(4px);
   background-color: rgba(0,0,0,0.5);
   gap: 20px;
@@ -58,12 +58,12 @@
 }
 
 .content h1 {
-  font-size: 48px;
+  font-size: 38px;
   margin-bottom: 10px;
 }
 
 .content p {
-  font-size: 25px;
+  font-size: 20px;
 }
 
 .divider {
@@ -124,7 +124,7 @@
 
   .landing_content {
     margin-top: 100px; /* Adjust as needed */
-    margin-left: 0;
+    margin-left: 0px;
     width: 80%; /* Adjust as needed */
     text-align: center;
   }
