--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -188,6 +188,23 @@ body {
 
     
 }
+
+.cart-container {
+    position: relative;
+}
+
+.cart-count {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    border-radius: 50%;
+    padding-bottom: 8px;
+    font-size: 20px;
+    pointer-events: none;
+}
+
 /* Add Media Query for responsiveness */
 @media (max-width: 768px) {
     .product-card {
